--- a/home.html
+++ b/home.html
@@ -194,7 +194,7 @@
         <button class="button" onclick="openPage('movies.html')">
           Watch Movies
         </button>
-        <button class="button" onclick="openPage('proxyy.html')">
+        <button class="button" onclick="openPage('proxyrh/index.html')">
           Use Proxy
         </button>
         <button class="button" onclick="openPage('ai.html')">ChatGPT AI</button>
