--- a/home.html
+++ b/home.html
@@ -194,8 +194,8 @@
         <button class="button" onclick="openPage('movies.html')">
           Watch Movies
         </button>
-        <button class="button" onclick="openPage('proxyrh/index.html')">
-          Use Proxy
+        <button class="button" onclick="openPage('uvproxy.html')">
+           Proxy
         </button>
         <button class="button" onclick="openPage('ai.html')">ChatGPT AI</button>
         <button class="button" onclick="openPage('dcchat.html')">
