--- a/uvproxy.html
+++ b/uvproxy.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Redirect Page</title>
-  <script>
-    window.onload = function() {
-      window.location.href = "/static/"; // Replace with your desired URL
-    };
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Open in New Tab</title>
+    <script>
+        // Open the URL in a new tab
+        window.onload = function() {
+            window.open("https://uv-proxy-85l.pages.dev/static/", "_blank");
+        };
+    </script>
 </head>
 <body>
-  <h1>Redirecting...</h1>
-  <p>If you are not redirected, <a href="/static/">click here</a>.</p>
+    <p>The website has been opened in a new tab. If it didn't open, <a href="https://uv-proxy-85l.pages.dev/static/" target="_blank">click here</a>.</p>
 </body>
 </html>
