--- a/home.html
+++ b/home.html
@@ -201,6 +201,9 @@
         <button class="button" onclick="openPage('dcchat.html')">
           Discord Chatroom
         </button>
+        <button class="button" onclick="openPage('gxmes/index.html')">
+          My Games
+        </button>
         <button class="button" onclick="openCredits()">Credits</button>
       </div>
     </div>
